basic world generation and player collision

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\FollowPlayer.cs" />
+    <Compile Include="Assets\Script\FollowPlayer.cs" />
+    <Compile Include="Assets\Script\listen.cs" />
     <Compile Include="Assets\Script\WorldGeneration.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>/Users/angusoneill/miniCraft/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
